2002-11-17  Mikael Djurfeldt  <mdj@linnaeus>

	* Makefile.am, guile-tcltk-aclocal.sh: Run aclocal in a sane way.

	* configure.in: Make thread support test depend on the existence
	of scm_internal_select instead of -lqthreads GUILE_LIBS;
	Don't update LIBOBJS directly.  Instead use AC_LIBOBJ.  Later
	versions of autoconf demands this.

	* acinclude.am: New file: Provides the GUILE_COMPAT macro.

	* Makefile.am (INCLUDES): Define INCLUDES to GUILE_CFLAGS.

2002-11-14  Mikael Djurfeldt  <mdj@linnaeus>

	* hand.scm (hand): Lock mutex before waiting on the condition
	variable.

	* guile-tk.c (main_loop): Lock scm_tcl_mutex before entering main
	loop.

	* tcltk.scm (tk-stack-mark): Removed.

	* Makefile.am, Makefile.in, aclocal.m4, breakout.scm,
	config.guess, config.sub, configure, configure.in,
	gtcltk-module.c, gtcltk.scm, guile-tcl.c, guile-tcl.h, guile-tk.c,
	guiledlopenhelper.c, ltmain.sh, missing, mkinstalldirs,
	tclUnixNotfy.c, tcltk.scm: Changes to update guile-tcltk to
	support guile-1.7.0.

        * compat.h: New file.
	
2001-10-05  Mikael Djurfeldt  <mdj@linnaeus>

	* tcltk.scm (tk-stack-mark): Removed.

2000-06-29  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* guile-tcl.c (free_interp): Bugfix: Memory leak: Free the
	gtcltk_interp structure.
	(scm_init_gtcl): Use new style smobs.
	(print_interp): Removed.
	(scm_tcl_create_interp): Use scm_memory_error.

2000-03-22  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
	
	* guile-tcl.c, guile-tk.c, guile-tk.h: Removed SCM_P macro
	invocations.
	
	* guile-tcl.c (masked_apply): New function: Uses dynamic wind in
	order not to clobber scm_mask_ints on error.

	* guile-tk.c (main_loop_handler, io_loop_handler): Unmask signals
	on exit from the handler.

1999-12-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Define SCM_MUTEX_INIT_TWO_ARGS if scm_mutex_init
	takes an extra attributes arg.
	
	* guile-tcl.c (scm_init_gtcl): Conditionally add extra arg to
	scm_mutex_init.
